# agentTG

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fix_titles.py  get_channel_id.py  login.py  nohup.out  outreach.py  pyproject.toml  qr_login.py  start.sh
.nessy/: settings.json  settings.json.orig
.nessy/tmp/: nessy-review-local-changed.json  nessy-review-local-deterministic.json
data/: .login_hash  .login_state.json  contacted.json  userbot.session-shm
data/litellm/chatgpt/: auth.json
prompts/: persona.ru.txt  safety.ru.txt  system.ru.txt
src/tg_agent/: __init__.py  __main__.py  config.py  logging.py  main.py  smoke_llm.py
src/tg_agent/agent/: __init__.py  llm.py  models.py  prompts.py  reply.py  sanitizer.py
src/tg_agent/control_bot/: __init__.py  bot.py  handlers.py  hitl.py  keyboards.py
src/tg_agent/humanizer/: __init__.py  delays.py
src/tg_agent/policy/: __init__.py  cooldown.py  filters.py  gate.py  modes.py
src/tg_agent/storage/: __init__.py  db.py  models.py  repositories.py
src/tg_agent/userbot/: __init__.py  channel_config.py  channel_handler.py  client.py  handlers.py  sender.py
tests/: __init__.py  conftest.py  test_cooldown.py  test_hitl.py  test_incoming_catchup.py  test_llm_provider_selection.py  test_oauth_config.py  test_policy.py  test_smoke_llm.py
